bug correct chrome

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </p>
 
             <h2>Vertical orientation</h2>
-            The vertical orientation example is located in the right side bar -------->>>>>
+            The vertical orientation example is located in the right side bar -------------->
             <h3>How it works</h3>
             Dead simple :
             <code>
