windows load io doc ready

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
       </div>
       <script type="text/javascript">
-        $(function() {
+        $(window).load(function() {
           $('#my_horizontal_slide_menu').covercase({
             scroll_orientation: "x",
             height: 200
